--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -18,7 +18,7 @@ autoConfigure = true
 [Site]
 ; Base URL is normally auto-detected, but this setting is used when autodetection is
 ; not possible (i.e. during sitemap generation at the command line).
-url             = http://library.myuniversity.edu/vufind
+url             = http://ptah.ub.uni-tuebingen.de//
 email           = support@myuniversity.edu
 title           = "Library Catalog"
 ; This is the default theme for non-mobile devices (or all devices if mobile_theme
@@ -299,7 +299,7 @@ ils_encryption_key = false
 ;solr            = http://localhost:8080/solr
 
 ; When using the File mode, specify a directory for saving stat files here:
-;file            = /usr/local/vufind/local/logs
+;file            = /usr/local/vufind2/local/logs
 
 ; When displaying search statistics in the Admin module, do you want to see a single
 ; merged list, or separate grouped lists by module (Solr, Summon, etc.)
@@ -682,7 +682,7 @@ embed = false
 ; Note that the contents of this cache will not be expired by VuFind; you should
 ; set up an external process like a cron job to clear out the directory from time
 ; to time.
-;resolver_cache = /usr/local/vufind/resolver_cache
+;resolver_cache = /usr/local/vufind2/resolver_cache
 
 ; This setting controls whether we should display an OpenURL link INSTEAD OF other
 ; URLs associated with a record (true) or IN ADDITION TO other URLs (false).
@@ -797,7 +797,7 @@ skip_numeric = true
 ; configurations together if you wish.
 [Parent_Config]
 ; Full path to parent configuration file:
-;path = /usr/local/vufind/application/config/config.ini
+;path = /usr/local/vufind2/application/config/config.ini
 ; Path to parent configuration file (relative to the location of this file):
 ;relative_path = ../masterconfig/config.ini
 
