--- a/config/vufind/httpd-vufind.conf
+++ b/config/vufind/httpd-vufind.conf
@@ -1,7 +1,7 @@
 # Configuration for theme-specific resources:
-AliasMatch ^/vufind/themes/([0-9a-zA-Z-_]*)/css/(.*)$ /usr/local/vufind/themes/$1/css/$2
-AliasMatch ^/vufind/themes/([0-9a-zA-Z-_]*)/images/(.*)$ /usr/local/vufind/themes/$1/images/$2
-AliasMatch ^/vufind/themes/([0-9a-zA-Z-_]*)/js/(.*)$ /usr/local/vufind/themes/$1/js/$2
+AliasMatch ^/vufind/themes/([0-9a-zA-Z-_]*)/css/(.*)$ /usr/local/vufind2/themes/$1/css/$2
+AliasMatch ^/vufind/themes/([0-9a-zA-Z-_]*)/images/(.*)$ /usr/local/vufind2/themes/$1/images/$2
+AliasMatch ^/vufind/themes/([0-9a-zA-Z-_]*)/js/(.*)$ /usr/local/vufind2/themes/$1/js/$2
 <Directory ~ "^/usr/local/vufind/themes/([0-9a-zA-Z-_]*)/(css|images|js)/">
   <IfModule !mod_authz_core.c>
     Order allow,deny
@@ -14,8 +14,8 @@ AliasMatch ^/vufind/themes/([0-9a-zA-Z-_]*)/js/(.*)$ /usr/local/vufind/themes/$1
 </Directory>
 
 # Configuration for general VuFind base:
-Alias /vufind /usr/local/vufind/public
-<Directory /usr/local/vufind/public/>
+Alias /vufind /usr/local/vufind2/public
+<Directory /usr/local/vufind2/public/>
   <IfModule !mod_authz_core.c>
     Order allow,deny
     Allow from all
@@ -55,7 +55,7 @@ Alias /vufind /usr/local/vufind/public
 
   # This line points to the local override directory where you should place your customized files
   # to override VuFind core features/settings.  Set to blank string ("") to disable.
-  SetEnv VUFIND_LOCAL_DIR /usr/local/vufind/local
+  SetEnv VUFIND_LOCAL_DIR /usr/local/vufind2/local
 
   # This line specifies additional Zend Framework 2 modules to load after the standard VuFind module.
   # Multiple modules may be specified separated by commas.  This mechanism can be used to override
