--- a/import/import_auth.properties
+++ b/import/import_auth.properties
@@ -5,8 +5,8 @@
 # you want to use, or to a directory of jar files extracted from a Solr war files.  If
 # this is not provided, SolrMarc can only work by communicating with a running Solr server.
 # IMPORTANT NOTE FOR WINDOWS USERS:
-#      Use forward slashes, not back slashes (i.e.  c:/vufind/..., not c:\vufind\...)
-# solrmarc.solr.war.path=/usr/local/vufind/solr/jetty/webapps/solr.war
+#      Use forward slashes, not back slashes (i.e.  c:/vufind2/..., not c:\vufind2\...)
+# solrmarc.solr.war.path=/usr/local/vufind2/solr/jetty/webapps/solr.war
 
 # solrmarc.custom.jar.path - Jar containing custom java code to use in indexing. 
 # If solr.indexer below is defined (other than the default of org.solrmarc.index.SolrIndexer)
@@ -24,7 +24,7 @@ solr.hosturl = http://localhost:8080/solr/authority/update
 
 #where to look for properties files, translation maps, and custom scripts
 #note that . refers to the directory where the jarfile for SolrMarc is located.
-solrmarc.path = /usr/local/vufind/import
+solrmarc.path = /usr/local/vufind2/import
 
 # Path to your marc file
 marc.to_utf_8 = true
