--- a/local/httpd-vufind.conf
+++ b/local/httpd-vufind.conf
@@ -31,6 +31,10 @@ AliasMatch ^/themes/([0-9a-zA-Z-_]*)/js/(.*)$ /usr/local/vufind2/themes/$1/js/$2
 
   RewriteEngine On
   RewriteBase /
+  
+  # Ensure that we are under SSL:
+  RewriteCond   %{SERVER_PORT} !^443$
+  RewriteRule   ^.*$     https://%{SERVER_NAME}%{REQUEST_URI}  [L,R]
 
   # If using VuDL, uncomment the following line, fill in your appropriate Fedora
   # server and port, and make sure that Apache mod_proxy and mod_proxy_http are
@@ -60,16 +64,6 @@ AliasMatch ^/themes/([0-9a-zA-Z-_]*)/js/(.*)$ /usr/local/vufind2/themes/$1/js/$2
   # This line specifies additional Zend Framework 2 modules to load after the standard VuFind module.
   # Multiple modules may be specified separated by commas.  This mechanism can be used to override
   # core VuFind functionality without modifying core code.
-  # SetEnv VUFIND_LOCAL_MODULES TueLib
+  SetEnv VUFIND_LOCAL_MODULES TueLib,ixTheo
 </Directory>
 
-NameVirtualHost *:80
-
-<VirtualHost *:80>
-    DocumentRoot /usr/local/vufind2/public
-    ServerName ub.uni-tuebingen.de
-    ServerAlias ptah.ub.uni-tuebingen.de
-</VirtualHost>
-
-
-LogLevel debug
