Bible range search v0.1

--- a/import/marc_local.properties
+++ b/import/marc_local.properties
@@ -64,3 +64,7 @@
 #container_start_page = 773q
 #container_reference = 773g
 #container_title = 773s
+
+# IxTheo
+bible_ranges = 801a 
+# script(bib_ref.bsh), getRanges(801a)
