--- a/local/httpd-vufind-vhosts.conf
+++ b/local/httpd-vufind-vhosts.conf
@@ -8,8 +8,8 @@
     SSLEngine On
     SSLProtocol all -SSLv2 -SSLv3
     SSLCipherSuite HIGH:MEDIUM:!aNULL:!MD5
-    SSLCertificateFile /etc/pki/tls/certs/localhost.crt
-    SSLCertificateKeyFile /etc/pki/tls/private/localhost.key
+    SSLCertificateFile /etc/httpd/cert/cert-7100749798072056.pem
+    SSLCertificateKeyFile /etc/httpd/cert/generated-keyout.pem
 
     DocumentRoot /usr/local/vufind2/public
     ServerName ptah.ub.uni-tuebingen.de
