Moved private resources to tuelib-folder

--- a/local/httpd-vufind.conf
+++ b/local/httpd-vufind.conf
@@ -33,8 +33,8 @@ AliasMatch ^/themes/([0-9a-zA-Z-_]*)/js/(.*)$ /usr/local/vufind2/themes/$1/js/$2
   RewriteBase /
   
   # Ensure that we are under SSL:
-  RewriteCond   %{SERVER_PORT} !^443$
-  RewriteRule   ^.*$     https://%{SERVER_NAME}%{REQUEST_URI}  [L,R]
+#  RewriteCond   %{SERVER_PORT} !^443$
+#  RewriteRule   ^.*$     https://%{SERVER_NAME}%{REQUEST_URI}  [L,R]
 
   # If using VuDL, uncomment the following line, fill in your appropriate Fedora
   # server and port, and make sure that Apache mod_proxy and mod_proxy_http are
