Server spezifische Konfigurationen extrahiert

--- a/local/config/vufind/config.ini
+++ b/local/config/vufind/config.ini
@@ -16,11 +16,7 @@ autoConfigure = "0"
 
 ; This section will need to be customized for your installation
 [Site]
-; Base URL is normally auto-detected, but this setting is used when autodetection is
-; not possible (i.e. during sitemap generation at the command line).
-url              = "http://ptah.ub.uni-tuebingen.de"
-email            = "support@myuniversity.edu"
-title            = "Library Catalog"
+@include = 'server.ini'
 ; This is the default theme for non-mobile devices (or all devices if mobile_theme
 ; is disabled below). Available standard themes:
 ;   blueprint =  XHTML theme using Blueprint + jQuery libraries [deprecated]
