Ignore Eclipse config files

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,22 @@ import/solrmarc.log
 import/solrmarc.log.1
 
 local/config/vufind/server.ini
+/start-vufind.sh
+
+# Eclipse IDE
+.classpath
+.project
+*.pydevproject
+.metadata
+.gradle
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.buildpath
+.target
