--- a/local/config/vufind/config.ini
+++ b/local/config/vufind/config.ini
@@ -16,7 +16,11 @@ autoConfigure = "0"
 
 ; This section will need to be customized for your installation
 [Site]
-@include = 'server.ini'
+; Base URL is normally auto-detected, but this setting is used when autodetection is                                                 
+; not possible (i.e. during sitemap generation at the command line).                                                                 
+url             = http://library.myuniversity.edu/vufind
+email           = support@myuniversity.edu
+title           = "Library Catalog"
 ; This is the default theme for non-mobile devices (or all devices if mobile_theme
 ; is disabled below). Available standard themes:
 ;   blueprint =  XHTML theme using Blueprint + jQuery libraries [deprecated]
@@ -1203,3 +1207,5 @@ tags             = "disabled"
 ; field size in the tags database table.
 max_tag_length   = "64"
 
+; Include server specific configuration file
+@include = 'server.private.ini'
