--- a/local/config/vufind/config.ini
+++ b/local/config/vufind/config.ini
@@ -16,8 +16,8 @@ autoConfigure = "0"
 
 ; This section will need to be customized for your installation
 [Site]
-; Base URL is normally auto-detected, but this setting is used when autodetection is                                                 
-; not possible (i.e. during sitemap generation at the command line).                                                                 
+; Base URL is normally auto-detected, but this setting is used when autodetection is
+; not possible (i.e. during sitemap generation at the command line).
 url             = http://library.myuniversity.edu/vufind
 email           = support@myuniversity.edu
 title           = "Library Catalog"
@@ -90,6 +90,9 @@ bookBagMaxSize   = "100"
 showBulkOptions  = 
 ; Generator value to display in an HTML header <meta> tag:
 generator        = "VuFind 2.3.1"
+
+; Include server specific and private configurations
+@include = 'local_overrides/site.conf'
 
 ; This section allows you to configure the mechanism used for storing user
 ; sessions.  Available types: File, Memcache, Database.
@@ -391,6 +394,8 @@ database         = "mysql://vufind:Roh8aeng@localhost/vufind"
 ; RECOMMENDED and is the default if no value is set here.  You may need latin1
 ; for compatibility with existing VuFind 1.x installations.
 ;charset = utf8
+
+@include = 'local_overrides/database.conf'
 
 ; LDAP is optional.  This section only needs to exist if the
 ; Authentication Method is set to LDAP.  When LDAP is active,
@@ -1207,5 +1212,3 @@ tags             = "disabled"
 ; field size in the tags database table.
 max_tag_length   = "64"
 
-; Include server specific configuration file
-@include = 'server.private.ini'
